[tool.poetry]
name = "httpx_scripts"
version = "0.1.0"
description = ""
authors = ["AlexanderKhalikov <sasha.khalikov@gmail.com>"]

packages = [
    {include = "scripts"}
]


license = "MIT"
classifiers = [
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]


[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
requests = "^2.28.1"
PyYAML = "^6.0"
six = "^1.16.0"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
pytest-httpx = "^0.21.0"
pytest-asyncio = "^0.19.0"
asyncmock = "^0.4.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
